  assembly-agc
  assembly-ags
  assembly-m68k
  assembly-mcs51
  assembly-parrot
  assembly-r2000
  assembly-x86
  awk
  cobol
  csv
  csv-commits
  eiffel
  foxpro
  hex
  htaccess
  hxml
  icon
  ini
  jmk
  json
  mqsc
  outline
  props
  ptl
  pvwave
  rfc
  rib
  rpmspec
  sip
  splus
  sqr
  squidconf
  svn-commit
  text
  vhdl
  visualbasic
  yab

- In mode syntax file, SPAN_REGEXP can now end with a regex
 (patch #3162735 from Evan Wright, Matthieu Casanova)

- Dynamic softwrap. Now the softwrap margin is the minimum of the buffer wrap
  guide and the max length displayable in the TextArea (patch #2846458 from
  Suraj Kurapati, Matthieu Casanova)

- Added an option to search for entire words (patch #2842461 from encorejane,
  Matthieu Casanova)

- Included the Windows launcher in the Java installer (Björn "Vampire" Kautler)

- Made our documentation build on FOP 0.93+, 0.20.5 is no longer supported by
  our files (Björn "Vampire" Kautler)

- Made the Windows installer buildable completely via wine on non-Windows
  systems (Björn "Vampire" Kautler)

- Removed the BAT launcher in the Windows installer in favor of the EXE
  launcher (Björn "Vampire" Kautler)

- Fixed the settings for building the Windows launcher (Björn "Vampire" Kautler)

- Made the Deb Ant task compatible to Ant 1.8+ (Björn "Vampire" Kautler)

- Replaced the links to Java 5 documentation with links to Java 6 documentation
  (Björn "Vampire" Kautler)

- Fixed the build.xml which was for the Windows installer only working if
  completely run on Windows, making "ant dist-win" on another system and then
  using "ant dist-win-finish" was broken (Björn "Vampire" Kautler)

- Made the Windows launcher buildable on any system (Björn "Vampire" Kautler)

- README.SRC.txt cleanup (Björn "Vampire" Kautler)

- Made the Windows installer correctly show special characters like german
  umlauts (Björn "Vampire" Kautler)

- Made the filter tasks use UTF-8 encoding as all our files are UTF-8 encoded